--- a/src/components/home/featured/styles.scss
+++ b/src/components/home/featured/styles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700&family=Smooch+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
 
 
-#header {
+#feature {
     margin-top: 10px;
     width: 100vw;
     height: 100vh;
@@ -44,7 +44,7 @@
 
 }
 
-#header-dark {
+#feature-dark {
     margin-top: 10px;
     width: 100vw;
     height: 100vh;
