--- a/src/components/home/featured/styles.scss
+++ b/src/components/home/featured/styles.scss
@@ -5,6 +5,7 @@
     margin-top: 10px;
     width: 100vw;
     height: 100vh;
+    padding: 8px 80px;
 
     .t-header {
         text-align: center;
@@ -48,6 +49,7 @@
     margin-top: 10px;
     width: 100vw;
     height: 100vh;
+    padding: 8px 80px;
 
     .t-header {
         text-align: center;
