--- a/src/components/home/featured/styles.scss
+++ b/src/components/home/featured/styles.scss
@@ -22,24 +22,62 @@
             height: 40vh;
             background: orange;
             padding: 20px;
+
+            .Nig {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
 
         .top-right {
             height: 42vh;
             background-color: antiquewhite;
             padding: 20px;
+
+            .Gh {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
 
         .bottom-left {
             height: 40vh;
             background: black;
             padding: 20px;
+            color: white;
+
+            .Jac {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+                color: white;
+            }
         }
 
         .bottom-right {
             height: 42vh;
             background: azure;
             padding: 20px;
+
+            .Sa {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
     }
 
@@ -67,24 +105,62 @@
             height: 40vh;
             background: orange;
             padding: 20px;
+
+            .Nig {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
 
         .top-right {
             height: 42vh;
             background-color: antiquewhite;
             padding: 20px;
+
+            .Gh {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
 
         .bottom-left {
             height: 40vh;
             background: black;
             padding: 20px;
+            color: white;
+
+            .Jac {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+                color: white;
+            }
         }
 
         .bottom-right {
             height: 42vh;
             background: azure;
             padding: 20px;
+
+            .Sa {
+                text-align: left;
+                font-size: 55px;
+                font-weight: 700;
+                line-break: 20px;
+                font-family: 'Bitter', serif;
+                font-family: 'Smooch Sans', sans-serif;
+            }
         }
     }
 }
