--- a/src/components/home/featured/styles.scss
+++ b/src/components/home/featured/styles.scss
@@ -16,6 +16,14 @@
         font-family: 'Smooch Sans', sans-serif;
     }
 
+    .p {
+        color: white;
+    }
+
+    .p-dark {
+        color: black;
+    }
+
 
     .featured-container {
         .top-left {
